# university

./: .gitmodules  LICENSE.md  README.md
A&DS/: README.md
A&DS/10.Strings/: README.md  b_prefix_function.cpp  d_kmp.cpp  g_multiple_search.cpp  h_substring_quantity.cpp  i_substring_left_right.cpp  j_suffix_array.cpp  k_substring_quantity.cpp  m_lcs.cpp
A&DS/3.DP/: a_grasshopper.cpp  c_course_of_the_horse.cpp  e_cafe.cpp  f_brackets_remove.cpp  h_tree.cpp  j_seller.cpp  k_nice.cpp  l_cows.cpp
A&DS/4.SegTree/: d_painter.cpp  f_sparse.cpp  h_rmq.cpp  i_mountains.cpp  j_wall.cpp  k_permutaion.cpp  l_parking.cpp
A&DS/5.BST/: b_balanced.cpp  c_dekart.cpp  d_keys.cpp  f_kth_max.cpp  g_beginning.cpp  h_log.cpp  i_roads.cpp
A&DS/6.Trees/: README.md  a_lca.cpp  b_minonpath.cpp  h_tree.cpp
A&DS/7.Greed/: README.md  c_printing.cpp  d_sequence.cpp  e_apples.cpp  i_sqroot.cpp  j_jurassic.cpp
A&DS/8.Graphs/: a_topsort.cpp  c_cut_vertex.cpp  d_edge_duality.cpp  f_condensation.cpp  g_party.cpp  i_spanning_tree.cpp  j_spanning_tree_2.cpp  k_chinese.cpp
A&DS/9.MinPaths/: README.md  c_ford_bellman.cpp  e_min_path.cpp  f_milk.cpp
Algorithms and Data Structures/: README.md
Algorithms and Data Structures/10.Strings/: a_substring_comparison.cpp  c_z_function.cpp  d_boyer_moore.cpp  l_kth_cycle_shift.cpp
Algorithms and Data Structures/3.DP/: README.md  b_maximum_rising_subsequence.cpp  g_brackets_remove.cpp
Algorithms and Data Structures/4.SegTree/: README.md  a_sum0.cpp  c_rmq2.cpp
Algorithms and Data Structures/7.Greed/: b_request.cpp  f_john.cpp  g_beautiful.cpp  h_vectors2.cpp  k_dowry.cpp
Algorithms and Data Structures/8.Graphs/: b_bridges.cpp
Algorithms and Data Structures/9.MinPaths/: a_floyd.cpp  b_dijkstra.cpp  h_dwarf.cpp
C++/: README.md
C++/Function/: function.h  main.cpp
C++/SimilarFiles/: README.md  mainwindow.cpp  mainwindow.h  parameters.h
C++/conspects/: 08_12_file_systems.md  15_12_system_compilation_process.md
Cpp/: BaseBigInteger.cpp  BigInteger10.cpp
Cpp/BaseBigInteger/: BigInteger.h  test.cpp
Cpp/SimilarFiles/: CMakeLists.txt  main.cpp  mainwindow.ui  similarFiles.pro
Discrete Math/: README.md
Discrete Math/3.Probability/: a_exam.cpp  d_markchain.cpp
Discrete Math/4.Languages/: d_wordsDFA.cpp  g_equivalence.cpp  h_minimization.cpp  i_fastminimization.cpp
Discrete Math/5.CFGrammar/: README.md
Discrete Math/6.Hamilton/: b_chvatal.cpp  c_east.cpp
Discrete Math/7.Planarity/: a_graph_embedding.cpp  d_planarity_check.cpp
Discrete Math/8.Matroids/: README.md  c_matching.cpp  d_check.cpp  e_cycles.cpp
JS/: functionalExpression.js  objectExpression.js
Java/: README.md
Java/1.CalcSHA256/: CalcSHA256.java
Java/6.Javadoc/: module-info.java
Java⁄ExpressionParser/: CheckedMultiply.java  CheckedPow10.java
Java⁄ExpressionParser/exceptions/: EvaluatingException.java  ExceptionsPowLog10Test.java  ParsingException.java
Java⁄ExpressionParser/parser/: ExpressionParser.java
Mathematical Logic/: README.md
Mathematical Logic/1.ExpressionParser/: Expression.hs
Mathematical Logic/2.ProofMinimization/: Makefile  Proof.hs  TaskGrammar.y
Web/: README.md
Web/10.SpringAPI/: README.md
Web/3.servlets/: README.md  pom.xml
Web/6.js/: README.md  profile.properties
Web/7.spring/: README.md  pom.xml
Web/8.tableRelations/: pom.xml
Web/9.vueJS/: package.json
advanced-algorithms/: README.md
algorithms-and-data-structures/: README.md
c++/: README.md
cryptography/: README.md
data-processing/: .gitignore  README.md  flake.nix
data-processing/sentiment/: pyproject.toml  report.ipynb
data-processing/sentiment/data/: contraction_mapping.csv  emnlp_dict.csv  emoticons.csv  test.csv  train.csv
data-processing/sentiment/report/: ITMOtheme.sty  presentation.tex
databases/: README.md  default.nix
deep-learning/: 1-1.ipynb  1-2.ipynb  2.ipynb  3.ipynb  4.ipynb
discrete-maths/: README.md
distributed-systems/: README.md
functional-programming/: README.md  shell.nix  stack.yaml
functional-programming/hw0/: README.md  hw0.cabal  hw0.nix  release.nix
functional-programming/hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
functional-programming/hw1/: LICENSE  README.md  hw1.cabal  hw1.nix  release.nix
functional-programming/hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Block6.hs
functional-programming/hw1/test/: Generator.hs  InstanceTest.hs  Spec.hs  SpecBlock1.hs  SpecBlock2.hs  SpecBlock3.hs  SpecBlock4.hs  SpecBlock5.hs  SpecBlock6.hs
functional-programming/hw2/: LICENSE  README.md  hw2.cabal  hw2.nix  release.nix  stack.yaml
functional-programming/hw2/app/: Main.hs
functional-programming/hw2/src/FileSystemShell/: CommandParser.hs  Error.hs  FileManager.hs  Scan.hs  Shell.hs  Types.hs  Update.hs  Utils.hs  VersionControlSystem.hs
functional-programming/hw2/test/: Spec.hs
functional-programming/hw3/: README.md  hw3.cabal  hw3.nix  release.nix  stack.yaml
functional-programming/hw3/app/: Main.hs
functional-programming/hw3/bench/: ConcurrentHashTableBench.hs  GeometryBench.hs  Main.hs
functional-programming/hw3/src/: Comonad19.hs  ConcurrentHashTable.hs  FileSystemChange.hs  FileSystemLens.hs  FileSystemTraversal.hs  Geometry.hs  Script.hs  ScriptPrinter.hs
functional-programming/hw3/test/: ConcurrentHashTableSpec.hs  Main.hs  ScriptPrinterSpec.hs  ScriptSpec.hs
functional-programming/practice1/: README.md  practice1.cabal  practice1.nix
functional-programming/practice1/app/: Main.hs
functional-programming/practice2/: README.md  practice2.cabal  practice2.nix  release.nix
functional-programming/practice2/app/: Main.hs
java/: README.md
machine-learning/: README.md
mathematical-logic/: README.md
mathematical-models/: README.md  dataset-visualization.ipynb  top50.csv
network/: README.md
operation-systems/: README.md
paradigms-of-programming/: README.md
parallel-programming/: README.md
probability-theory/: README.md
software-design/: README.md
translation-methods/: README.md
type-theory/: README.md
web/: README.md
(+904 files in other folders)
