[tool.poetry]
name = "sentiment"
version = "0.1.0"
description = ""
authors = ["Simon Naumov <daretoodefy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.5"
jupyter = "^1.0.0"
pandas = "^1.1.3"
sklearn = "^0.0"
pyenchant = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
