name:                hw0
version:             0.1.0.0
synopsis:            Functional programming introduction
description:         Task 0 for FP ITMO course

homepage:            https://github.com/nothingelsematters/functional-programming-course/tree/master/hw0#readme
license:             MIT
license-file:        LICENSE
author:              Simon Naumov
maintainer:          daretoodefy@gmail.ru
copyright:           2020 Simon Naumov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Task1 Task2 Task3 Task4 Task5 Task6 Task7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
