name:                hw2
version:             0.1.0.0
synopsis:            Second home howrk
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-nothingelsematters/tree/master#readme
license:             MIT
license-file:        LICENSE
author:              Simon Naumov
maintainer:          daretoodefy@gmail.com
copyright:           2020 Simon Naumov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.3

library
  hs-source-dirs:      src
  exposed-modules:     FileSystemShell.CommandParser
                     , FileSystemShell.Error
                     , FileSystemShell.FileManager
                     , FileSystemShell.Scan
                     , FileSystemShell.Shell
                     , FileSystemShell.Types
                     , FileSystemShell.Update
                     , FileSystemShell.Utils
                     , FileSystemShell.VersionControlSystem
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , directory >= 1.3.4
                     , Diff >= 0.4.0
                     , mtl >= 2.2.2
                     , transformers >= 0.5.6
                     , text >= 1.2.4
                     , time >= 1.9.3
                     , filepath >= 1.4.2.1
                     , unordered-containers >= 0.2.10
                     , random >= 1.1
                     , split >= 0.2.3
                     , extra >= 1.6
                     , strict >= 0.3.2
                     , optparse-applicative >= 0.15
  default-language:    Haskell2010


executable fss
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
                     , optparse-applicative >= 0.15
                     , directory >= 1.3.4
                     , transformers >= 0.5.6
                     , hw2
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  exposed-modules:     Spec
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , mtl >= 2.2.2
                     , transformers >= 0.5.6
                     , unordered-containers >= 0.2.10
                     , filepath >= 1.4.2
                     , hw2
  ghc-options:         -Wall -Werror -main-is Spec
  default-language:    Haskell2010
