name:                practice2
version:             0.1.0.0
synopsis:            Second practice tasks
description:         Practice 2 for FP ITMO course

homepage:            https://github.com/nothingelsematters/functional-programming-course/tree/master/practice2#readme
license:             MIT
license-file:        LICENSE
author:              Simon Naumov
maintainer:          daretoodefy@gmail.com
copyright:           2020 Simon Naumov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

executable practice2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
